[package]
name = "myip"
version = "0.0.1"
authors = ["Richthofen <jazzplato@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jazzplato/myip"
repository = "https://github.com/jazzplato/myip"
documentation = "https://github.com/jazzplato/myip"
description = "A simple command line tool to get the ip related information for your host."

[dependencies]
reqwest = "0.9.24"
